# notification-system

./: .gitignore  alembic.ini  asyncapi.json  docker-compose-dev.yaml  pyproject.toml
migrations/: env.py
migrations/versions/notification_workers/: 2025-08-29-213336_c3661a2357fc_ativa_extensão_uuid_ossp.py  2025-08-30-111159_0ad8cd4eac41_add_tabela_email_history.py  2025-08-30-111227_c42c543b15f0_cria_hypertable_para_tabela_email_history.py
migrations/versions/template_api_db/: 2025-08-23-233616_a2a9f6dc2646_ativa_extensão_uuid_ossp.py  2025-08-28-233600_061abd3fb25a_add_tabela_templates.py  2025-08-30-183839_3dd17e23efb8_add_colunas_de_contexto_p_templates_email.py
notification_system/: __init__.py
notification_system/common_utils/types/: jinja2_pydantic_schema.py
notification_system/notification_workers/: app.py  db_registry.py  settings.py
notification_system/notification_workers/models/: __init__.py  email_history_model.py
notification_system/notification_workers/routers/: transactional_email_router.py
notification_system/notification_workers/schemas/: email_template_schemas.py  message_schemas.py
notification_system/notification_workers/services/: mail_services.py  notification_services.py  template_services.py  transational_mail_notification_service.py
notification_system/public_api/: app.py  broker.py  security.py  settings.py
notification_system/public_api/routers/: mail_channel_router.py
notification_system/public_api/schemas/: mail_channel.py
notification_system/templates_api/: app.py  database.py  db_registry.py  settings.py
(+12 files in other folders)
